@@ -107,6 +107,7 @@ FHEM/33_readingsGroup.pm     justme1968           http://forum.fhem.de Frontends
 FHEM/33_readingsHistory.pm   justme1968           http://forum.fhem.de Frontends
 FHEM/33_readingsProxy.pm     justme1968           http://forum.fhem.de Automatisierung
 FHEM/32_speedtest.pm         justme1968           http://forum.fhem.de Sonstiges
+FHEM/34_NUT.pm               creideiki            http://forum.fhem.de Sonstige Systeme
 FHEM/34_panStamp.pm          justme1968           http://forum.fhem.de Sonstige Systeme
 FHEM/34_SWAP.pm              justme1968           http://forum.fhem.de Sonstige Systeme
 FHEM/35_SWAP_0000002200000003.pm     justme1968   http://forum.fhem.de Sonstige Systeme
